# pydis

./: README.md  pyproject.toml
src/pydis/: client.py  server.py
tests/: test_command_decr.py  test_command_decr_by.py  test_command_del.py  test_command_echo.py  test_command_exists.py  test_command_flushall.py  test_command_get.py  test_command_incr.py  test_command_incr_by.py  test_command_keys.py  test_command_last_save.py  test_command_ping.py  test_command_quit.py  test_command_random_key.py  test_command_sadd.py  test_command_set.py  test_commands_available.py
utils/: commands.txt  commands_availability.txt  generate_commands_available_pytest.sh  get_redis_commands_documention.sh
