[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydis"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Tomas Gustavsson", email = "tomplast@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["pytest"]

[project.urls]
Documentation = "https://github.com/Tomas Gustavsson/pydis#readme"
Issues = "https://github.com/Tomas Gustavsson/pydis/issues"
Source = "https://github.com/Tomas Gustavsson/pydis"

[tool.hatch.version]
path = "src/pydis/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pydis tests}"

[tool.coverage.run]
source_pkgs = ["pydis", "tests"]
branch = true
parallel = true
omit = [
  "src/pydis/__about__.py",
]

[tool.coverage.paths]
pydis = ["src/pydis", "*/pydis/src/pydis"]
tests = ["tests", "*/pydis/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
